<resources>
    <string name="app_name">Recipe</string>
    <!-- &#8211; is the unicode html_entity of "-" -->
    <string name="build_num">develop&#8211;60&#8211;d40a863</string>
    <string name="image_alt">Img</string>
    <string name="auth_key">aaron</string>

    <!-- MENU LABELS -->
    <string name="menu_update">Update</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_logs">Logs</string>

    <!-- URL -->
    <string name="url_address_default">192.168.0.101</string>
    <string name="url_resource_recipes">/Recipe/web_service/recipes</string>
    <string name="url_resource_categories">/Recipe/web_service/categories</string>

    <!-- HINTS -->
    <string name="hint_recipe">Search Recipe</string>
    <string name="hint_logs">Search Logs</string>

    <!-- DIALOG LABELS -->
    <string name="dialog_update_title">Updating</string>
    <string name="dialog_update_message">Retrieving data from server&#8230;</string> <!-- &#8230; is the unicode html_entity of "..." -->
    <string name="dialog_already_updating_message">Already retrieving data from server&#8230;</string> <!-- &#8230; is the unicode html_entity of "..." -->

    <!-- TEXT VIEW LABELS -->
    <string name="text_empty_list">There are no recipes.</string>
    <string name="text_build">Build Number</string>
    <string name="text_last_updated">Last Updated</string>
    <string name="text_category">Category:</string>
    <string name="text_font">Font:</string>
    <string name="text_recipes">Recipes</string>
    <string name="text_server">Server URL:</string>
    <string name="text_title">Title:</string>
    <string name="text_servings">Servings:</string>
    <string name="text_preparation_time">Preparation Time:</string>
    <string name="text_description">Description:</string>

    <!-- Error messages -->
    <string name="error_retrieving_categories">Failed retrieving categories from server. Update url in settings and try to update again.</string>
    <string name="categories_currently_updating">Categories is currently updating.</string>

    <!-- COMBO BOX ITEMS -->
    <string-array name="font_name_arrays">
        <item>Default</item>
        <item>Sans_Serif</item>
        <item>Serif</item>
        <item>Monospace</item>
    </string-array>

    <string-array name="font_style_arrays">
        <item>Normal</item>
        <item>Bold</item>
        <item>Italic</item>
        <item>Bold_Italic</item>
    </string-array>

    <string-array name="font_size_arrays">
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
