<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textview_category"
        style="@style/TextView_settings"
        android:layout_marginTop="15dp"
        android:text="@string/text_category" />

    <Spinner
        android:id="@+id/spinner_category"
        style="@style/Spinner_settings"
        android:layout_below="@id/textview_category" />

    <ImageView
        android:id="@+id/imageview_refresh_category"
        android:layout_below="@id/textview_category"
        android:layout_toEndOf="@id/spinner_category"
        android:layout_marginTop="15dp"
        style="@style/ImageView_settings"/>

    <TextView
        android:id="@+id/textview_font"
        style="@style/TextView_settings"
        android:layout_marginTop="10dp"
        android:layout_below="@id/spinner_category"
        android:text="@string/text_font" />

    <Spinner
        android:id="@+id/spinner_font_name"
        style="@style/Spinner_settings"
        android:layout_below="@id/textview_font"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/font_name_arrays" />

    <Spinner
        android:id="@+id/spinner_font_style"
        style="@style/Spinner_settings"
        android:layout_below="@id/textview_font"
        android:layout_toEndOf="@id/spinner_font_name"
        android:entries="@array/font_style_arrays" />

    <Spinner
        android:id="@+id/spinner_font_size"
        style="@style/Spinner_settings"
        android:layout_below="@id/textview_font"
        android:layout_toEndOf="@id/spinner_font_style"
        android:entries="@array/font_size_arrays" />

    <TextView
        android:id="@+id/textview_server_url"
        style="@style/TextView_settings"
        android:layout_below="@id/spinner_font_size"
        android:layout_marginTop="10dp"
        android:text="@string/text_server" />

    <EditText
        android:id="@+id/edittext_server_url"
        android:text="@string/url_address_default"
        android:inputType="textUri"
        android:layout_below="@id/textview_server_url"
        style="@style/EditText_settings" />
</RelativeLayout>
