<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/horizontalscroll_list_row">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp" >

        <GridLayout
            android:id="@+id/gridlayout_list_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:useDefaultMargins="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp" >

            <TextView
                android:id="@+id/textlabel_row_title"
                style="@style/TextView_list_row"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="start"
                android:text="@string/text_title" />

            <TextView
                android:id="@+id/text_row_title"
                style="@style/TextView_list_row"
                android:textStyle="bold"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="start"
                android:layout_marginStart="18dp"
                android:text="" />

            <TextView
                android:id="@+id/textlabel_row_servings"
                style="@style/TextView_list_row"
                android:layout_gravity="start"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/text_servings" />

            <TextView
                android:id="@+id/text_row_servings"
                style="@style/TextView_list_row"
                android:layout_gravity="start"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginStart="18dp"
                android:text="" />

            <TextView
                android:id="@+id/textlabel_row_category"
                style="@style/TextView_list_row"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="start"
                android:text="@string/text_category" />

            <TextView
                android:id="@+id/text_row_category"
                style="@style/TextView_list_row"
                android:layout_gravity="start"
                android:layout_row="0"
                android:layout_column="3"
                android:text="" />

            <TextView
                android:id="@+id/textlabel_row_preparation_time"
                style="@style/TextView_list_row"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="end"
                android:text="@string/text_preparation_time" />

            <TextView
                android:id="@+id/text_row_preparation_time"
                style="@style/TextView_list_row"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_gravity="start"
                android:text="" />
        </GridLayout>

        <TextView
            android:id="@+id/textlabel_row_description"
            style="@style/TextView_list_row"
            android:layout_below="@id/gridlayout_list_row"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/text_description" />

        <TextView
            android:id="@+id/text_row_description"
            style="@style/TextView_list_row"
            android:layout_marginStart="5dp"
            android:layout_alignBaseline="@id/textlabel_row_description"
            android:layout_toEndOf="@id/textlabel_row_description"
            android:text="" />

    </RelativeLayout>

</HorizontalScrollView>